# Kontor-Crypto

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: ci.yml  codspeed.yml
benches/: bench_main.rs  criterion_benchmarks.rs  e2e_scenarios.rs  file_preparation.rs  primitives.rs  proving.rs  verification.rs
src/: bench.rs  circuit_safety.rs  commitment.rs  config.rs  erasure.rs  error.rs  ledger.rs  lib.rs  main.rs  merkle.rs  metrics.rs  params.rs  poseidon.rs  utils.rs
src/api/: mod.rs  plan.rs  prove.rs  system.rs  types.rs  verify.rs  witness.rs
src/circuit/: debug.rs  mod.rs  synth.rs  witness.rs
src/circuit/gadgets/: hash.rs  merkle.rs  mod.rs  poseidon.rs  select.rs
tests/: README.md  api_consistency.rs  api_functionality.rs  circuit_uniformity.rs  circuit_uniformity_regression.rs  circuit_unit_tests.rs  circuit_wiring.rs  complex_aggregation.rs  depth_zero_cheat_regression.rs  documentation_consistency.rs  e2e_circuit_uniformity.rs  e2e_large_file.rs  e2e_single_file.rs  e2e_variable_depth.rs  fuzzing_targets.rs  ledger_batch_add.rs  ledger_state_changes.rs  padding_slot_zero_regression.rs  primitives_merkle.rs  public_leaf_exposure.rs  regression.rs  security.rs  security_challenge_distribution.rs  security_comprehensive.rs  security_ledger.rs  security_ledger_range_check.rs  security_ledger_root_pinning.rs  security_malicious_prover.rs  security_medium_priority.rs  security_negative_cases.rs  security_replay_attack.rs  shape_derivation.rs  single_file_depth_mismatch.rs  validation.rs  verifier_edge_cases.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
