[package]
name = "kontor-crypto"
version = "0.1.1"
edition = "2021"
default-run = "kontor-crypto"
license = "MIT"
description = "Kontor Proof-of-Retrievability system for decentralized storage"
repository = "https://github.com/KontorProtocol/Kontor-Crypto"
homepage = "https://github.com/KontorProtocol/Kontor-Crypto"
keywords = ["cryptography", "snark", "por", "storage", "zero-knowledge"]
categories = ["cryptography", "algorithms"]
readme = "README.md"
exclude = [
    ".github/",
    ".githooks/",
    ".claude/",
    "target/",
]

[dependencies]
# --- Core SNARK and Proof System Dependencies ---

# Use the arecibo crate from crates.io
arecibo = { version = "0.1.1" }
bellpepper-core = { version = "0.4.0", default-features = false }

# --- Hashing and Merkle Tree Dependencies ---

# Libraries for hashing and Merkle trees.
neptune = { version = "13.0.0", default-features = false }
ff = "0.13"
typenum = "1.15.0"
sha2 = "0.10.6"
generic-array = "0.14.7"


# --- Application and Tooling Dependencies ---

# Foundational libraries for serialization, CLI, and randomness.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
once_cell = "1.19.0"
num-traits = "0.2"
thiserror = "1.0"

# --- Observability & CLI Progress ---
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-tree = "0.3"

# --- Erasure Coding Dependencies ---

# Reed-Solomon erasure coding for fault tolerance
reed-solomon-erasure = "6.0"

[dev-dependencies]
clap = { version = "4.5.10", features = ["derive"] }
rand = "0.8.5"
statrs = "0.18.0"

[features]
default = []

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[[bin]]
name = "bench"
path = "src/bench.rs"
